Stop the diamonds cropping

--- a/src/styles/home.styl
+++ b/src/styles/home.styl
@@ -224,9 +224,11 @@ $initialBackgroundColor = desaturate(darken($colorPrimary, 50%), 25%);
 
 .landing-photo {
   display: inline-block;
+  position: relative;
   margin: 0 ($punit / 2);
   vertical-align: middle;
   flex: 0 1 auto;
+  z-index: 1;
 
   &-small {
     width: 200px;
